--- a/.cdmrc
+++ b/.cdmrc
@@ -1,2 +1,3 @@
 tabs: ['src/app/page.js']
-terminals: ["static-server -p 1337 --no-cache","npm install && npm run dev"]
+terminals: ["npm install && npm run dev"]
+run-button : npm run dev
