--- a/.cdmrc
+++ b/.cdmrc
@@ -1,3 +1,3 @@
-tabs: ['src/app/page.js']
-terminals: ["npm install && npm run dev"]
+tabs: ["src/app/page.js", "src/app/layout.tsx"]
+terminals: ["npm install"]
 run-button : npm run dev
