--- a/.cdmrc
+++ b/.cdmrc
@@ -1,3 +1,3 @@
-tabs: ["src/app/page.js", "src/app/layout.tsx"]
+tabs: ["src/app/page.js", "src/app/layout.js"]
 terminals: ["npm install"]
 run-button : npm run dev
