--- a/.cdmrc
+++ b/.cdmrc
@@ -1,3 +1,3 @@
 tabs: ["src/app/page.js", "src/app/layout.js"]
-terminals: ["npm install"]
+terminals: ["npm install -g npm@10.4.0 && npm install"]
 run-button : npm run dev
